[gd_scene load_steps=3 format=2]

[ext_resource path="res://actors/entities/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/EnemyGroup.gd" type="Script" id=2]

[node name="EnemyGroup" type="Node2D"]
script = ExtResource( 2 )

[node name="Enemy" parent="." instance=ExtResource( 1 )]
position = Vector2( -14, 8 )

[node name="Enemy2" parent="." instance=ExtResource( 1 )]
position = Vector2( 12, 8 )

[node name="Enemy3" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, -8 )

[node name="Enemy4" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 22 )

[node name="Enemy5" parent="." instance=ExtResource( 1 )]
position = Vector2( 30, 14 )

[node name="Enemy6" parent="." instance=ExtResource( 1 )]
position = Vector2( -32, 14 )
